--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-77753476-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-77753476-2');
+</script>
 
 <!--[if IE]><script type="text/javascript" src="js/excanvas.js"></script><![endif]--> <!-- js/default.js -->
   <script src="js/jquery/jquery.min.js" type="text/javascript"></script>
@@ -88,10 +97,6 @@
     </div>
   </div>
 	</div>
-</div>
-<div id="developercontainer">
-	<a href="http://www.oii.ox.ac.uk" title="Oxford Internet Institute"><div id="oii"><span>OII</span></div></a>
-	<a href="http://jisc.ac.uk" title="JISC"><div id="jisc"><span>JISC</span></div></a>	
 </div>
 <script type="text/javascript">
 
